agregado de archivo de productos y local

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <div class="input-container">
                     <i class="fa-solid fa-lock"></i>
                         <label for="contraseña">Contraseña</label>
-                        <input type="contraseña" name="contrasena" id="contraseña" placeholder="Contraseña" class="input">
+                        <input type="password" name="contrasena" id="contraseña" placeholder="Contraseña" class="input">
                     </div>
                     <label id="mensaje-contraseña"></label>
                     
